--- a/package.json
+++ b/package.json
@@ -10,14 +10,16 @@
     "@types/node": "^20.10.5",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
+    "@yudiel/react-qr-scanner": "^2.2.1",
     "bcrypt-ts": "^5.0.0",
     "drizzle-orm": "^0.29.2",
     "geist": "^1.2.0",
-    "next": "^14.0.4",
+    "next": "^15.1.7",
     "next-auth": "5.0.0-beta.4",
     "postgres": "^3.4.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-qr-reader": "^3.0.0-beta-1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
