--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "bcrypt-ts": "^5.0.0",
     "drizzle-orm": "^0.29.2",
     "geist": "^1.2.0",
+    "modern-react-qr-reader": "^1.0.12",
     "next": "^15.1.7",
     "next-auth": "5.0.0-beta.4",
     "postgres": "^3.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-qr-reader": "^3.0.0-beta-1"
+    "react-qr-reader": "^3.0.0-beta-1",
+    "react-qrcode-scanner": "^1.2.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
