--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "postgres": "^3.4.3",
     "qrcode.react": "^4.2.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
