--- a/package.json
+++ b/package.json
@@ -7,26 +7,26 @@
     "lint": "bun run next lint"
   },
   "dependencies": {
-    "@types/node": "^20.10.5",
-    "@types/react": "^18.2.45",
-    "@types/react-dom": "^18.2.18",
-    "bcrypt-ts": "^5.0.0",
-    "drizzle-orm": "^0.29.2",
-    "geist": "^1.2.0",
-    "next": "^14.0.4",
-    "next-auth": "^5.0.0-beta.25",
-    "postgres": "^3.4.3",
+    "@types/node": "^22.13.9",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
+    "bcrypt-ts": "^6.0.0",
+    "drizzle-orm": "^0.40.0",
+    "geist": "^1.3.1",
+    "next": "^15.2.1",
+    "next-auth": "^4.24.11",
+    "postgres": "^3.4.5",
     "qrcode.react": "^4.2.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.16",
-    "eslint": "8.56.0",
-    "eslint-config-next": "^14.0.4",
-    "postcss": "^8.4.32",
-    "tailwindcss": "^3.4.0",
-    "typescript": "^5.3.3"
+    "autoprefixer": "^10.4.20",
+    "eslint": "9.21.0",
+    "eslint-config-next": "^15.2.1",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.0.12",
+    "typescript": "^5.8.2"
   }
 }
