--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "qrcode.react": "^4.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
+    "socket.io-server": "^1.0.0-b",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
