Trying to resolve 'Could not find a declaration file for module 'modern-react-qr-reader'.'

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
       "@/styles/*": ["styles/*"]
     },
     "strict": true,
+    "typeRoots": ["./node_modules/@types", "./types"],
     "forceConsistentCasingInFileNames": true,
     "noEmit": true,
     "esModuleInterop": true,
